<resources>
    <string name="app_name">Cakey</string>
    <string name="company">v1.0 by @POPCORN Inc. 2021</string>

    <string name="username_hint">Username</string>
    <string name="username_required">Username is required!</string>

    <string name="email_hint">Email</string>
    <string name="email_required">Email is required!</string>
    <string name="email_invalid">Invalid Email</string>

    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_required">Password is required!</string>
    <string name="password_too_short">Password is too short</string>
    <string name="password_mismatch">Password Mismatch</string>

    <string name="signup">Sign up</string>
    <string name="signup_failed">Failed to register. Please try again!</string>
    <string name="login">Login</string>
    <string name="login_failed">Invalid email or password</string>
    <string name="signup_from_login">Sign up now</string>
    <string name="auth_succeed">Welcome %1$s!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit_forgot_pass_email">Submit</string>

    <!-- FAQs activity-->
    <string name="faqs">Frequently Asked Questions</string>

    <!-- profile activity-->
    <string name="profile">Profile</string>
    <string name="profile_achievement">Wales MasterChef</string>
    <string name="profile_id">Cakey ID</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_level">Level</string>
    <string name="profile_premium">Premium</string>
    <string name="profile_password">Password</string>

    <string name="edit_profile">Edit profile and password</string>
    <string name="change_achieve">Change achievement</string>
    <string name="logout">Log out</string>
    <string name="submit">Submit changes</string>

    <!-- achievement activity-->
    <string name="ac_title">Achievements</string>
    <string name="preview">Preview</string>
    <string-array name="ac_lists">
        <item>Junior Baker</item>
        <item>Senior Baker</item>
        <item>Toriko</item>
    </string-array>

    <!-- Blog package-->
    <string name="title">Blog Title</string>
    <string name="description">Description</string>
    <string name="usageImage">Upload 1 photo to blog</string>
    <string name="required">Required*</string>

    <string name="servings">Servings</string>
    <string name="hint_ser">4 people</string>
    <string name="cooking_time">Cooking time</string>
    <string name="minutes">30 minutes</string>

    <string name="ingredient_lists">Ingredients List</string>
    <string name="quantity">100</string>
    <string name="unit">grams</string>
    <string name="name_ing">sugar</string>
    <string name="calculateIngredient">Ingredients</string>
    <string name="askPortion">How many people do you want to serve?</string>
    <string name="ingredientsCalculator">Ingredients Calculator</string>

    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="guidelines">Guidelines</string>
    <string name="inputStep">Input step here</string>

    <string name="add_but">Add</string>
    <string name="usageAdd">Click to add</string>

    <string name="video">Video (Optional)</string>

    <string name="post_Blogs">Post</string>
    <string name="rating">Rate this blog</string>
    <string name="cmt">Comments</string>
    <string name="cmtHere">Leave a comment here.</string>

    <string name="report">Report</string>

    <!-- Report package-->
    <string name="reportTitle">Help us understand the problem.</string>
    <string name="reportQuestion">What is going on with this Blog (Recipe)?</string>

    <!-- main screen -->
    <string name="suggestion">Suggestion</string>
    <string name="search">Search</string>
    <string name="Author">Author</string>
    <!-- navigation drawer-->
    <string name="Account">Account</string>
    <string name="read_more">Read More</string>
    <string name="Home">Home</string>
    <string name="Favorite">Favorite</string>
    <string name="Course">Course</string>
    <string name="Write">Write</string>
    <string name="Help">Help</string>

    <!-- search-->
    <string name="Search_hint">type name, ingredient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>