<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".WriteBlogActivity">

    <RelativeLayout
        android:id="@+id/rootLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/blogTitle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/title"
                android:ellipsize="start"
                android:gravity="center_vertical"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/blogImage"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/blogTitle"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/splash_screen"
            android:contentDescription="@string/usageImage">
        </ImageView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addImage"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="65dp"

            android:src="@drawable/ic_add"
            android:contentDescription="@string/usageAdd">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <TextView
            android:id="@+id/description"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/blogImage"

            android:text="@string/description"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/detailDes"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contentDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/servings"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailDes"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"

            android:text="@string/servings"
            android:textSize="20sp">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/servings"
            android:layout_below="@id/detailDes"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="40dp"

            app:hintAnimationEnabled="false"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numSer"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:hint="@string/hint_ser"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/cooking_time"

            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/servings"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"

            android:text="@string/cooking_time"
            android:textSize="20sp">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cooking_time"
            android:layout_below="@id/servings"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"

            app:hintAnimationEnabled="false"
            app:hintEnabled="false"

            android:gravity="center">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeCook"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"

                android:hint="@string/minutes"/>
        </com.google.android.material.textfield.TextInputLayout>


        <!-- List ingredients. -->
        <TextView
            android:id="@+id/ingredientList"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cooking_time"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"

            android:text="@string/ingredient_lists"
            android:textSize="20sp"/>


        <LinearLayout
            android:id="@+id/detailList"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredientList"

            android:orientation="vertical">
        </LinearLayout>
        <Button
            android:id="@+id/button_add_ing"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailList"
            android:layout_centerInParent="true"

            android:text="@string/add_but"
            android:textStyle="bold"

            android:onClick="addIngredient">
        </Button>

        <!-- Guidelines -->
        <TextView
            android:id="@+id/guideline"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_add_ing"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"

            android:text="@string/guidelines"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/detailStep"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/guideline"
            android:orientation="vertical">
        </LinearLayout>

        <Button
            android:id="@+id/button_add_steps"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailStep"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"

            android:text="@string/add_but"
            android:textStyle="bold"

            android:onClick="addStep"/>


        <TextView
            android:id="@+id/video"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/button_add_steps"

            android:text="@string/video"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_add_video"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/video"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"

            android:text="@string/add_but"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button_post"

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_add_video"
            android:layout_alignParentEnd="true"

            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"

            android:text="@string/post_Blogs"
            android:textStyle="bold"

            android:onClick="postBlog"/>
    </RelativeLayout>
</ScrollView>