<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="90dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        app:helperText="@string/required"

        app:helperTextTextColor="@color/red"

        app:errorEnabled="true"

        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantity"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/quantity"

            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredientList"
        android:layout_marginStart="10dp"

        app:hintAnimationEnabled="false"
        app:hintEnabled="false"

        app:errorEnabled="true"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/unit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"

            android:hint="@string/unit" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredientList"
        android:layout_marginStart="10dp"

        app:hintAnimationEnabled="false"
        app:hintEnabled="false"

        app:errorEnabled="true"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameIngredient"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"

            android:hint="@string/name_ing" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ingredient_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_more_vert"

        android:onClick="optionsIngredient"
        android:contentDescription="@string/usageAdd" />



</LinearLayout>